--- a/docs/src/fhatos.adoc
+++ b/docs/src/fhatos.adoc
@@ -1,11 +1,31 @@
 :imagesdir: ../images
 :favicon: {imagesdir}/fhatos-logo-small.png
+:author: Dogturd Stynx
+:email: dogturd@fhatos.org
+:revnumber: 0.1
+:highlightjs-languages: java
+:tabsize: 2
 
-= FhatOS
+= FhatOS: A Distributed Operating System for Embedded Systems (v{revnumber})
 
-image:fhatos-logo.png[width=100,float=left] **FhatOS** (pronounced _fat_) is a https://en.wikipedia.org/wiki/Distributed_operating_system[distributed operating system] for https://en.wikipedia.org/wiki/ESP8266[ESP8266] and https://en.wikipedia.org/wiki/ESP32[ESP32] processors with support for sandboxed deployments on Linux and MacOSX systems. All FhatOS resources, from individual datum, files, processes exist within a single https://en.wikipedia.org/wiki/Uniform_Resource_Identifier[URI] address space called **furi** (pronounced "fury" or "fhat URI"). Processes communicate via a publish-subscribe message passing protocol that rides atop https://en.wikipedia.org/wiki/MQTT[MQTT] with various levels of access from thread local, to machine local and ultimately, globally via cluster remote.
+by {author} <{email}> +
+
+image:fhatos-logo.png[width=120,float=left] **FhatOS** (pronounced _fat_) is a https://en.wikipedia.org/wiki/Distributed_operating_system[distributed operating system] for https://en.wikipedia.org/wiki/ESP8266[ESP8266] and https://en.wikipedia.org/wiki/ESP32[ESP32] processors with support for sandboxed deployments on Linux and MacOSX systems. All FhatOS resources, from individual datum, files, processes exist within a single https://en.wikipedia.org/wiki/Uniform_Resource_Identifier[URI] address space called **furi** (pronounced "fury" or "fhat URI"). Processes communicate via a publish-subscribe message passing protocol that rides atop the https://en.wikipedia.org/wiki/MQTT[MQTT] pubsub protocol while supporting various levels of access from thread local, to machine local and ultimately, globally via cluster remote.
+
+== Features
+
+. A hardware agnostic https://en.wikipedia.org/wiki/Scheduling_(computing)[scheduler] for multi-tasking (https://en.wikipedia.org/wiki/Cooperative_multitasking[cooperative]) and multi-threading (https://en.wikipedia.org/wiki/Preemption_(computing)[premptive]) https://en.wikipedia.org/wiki/Monoid_(category_theory)[monoids].
+. An https://en.wikipedia.org/wiki/Actor_model[actor-oriented] https://en.wikipedia.org/wiki/Message_passing[message passing] communication infrastructure.
+. A memory architecture founded on a layered https://en.wikipedia.org/wiki/Uniform_Resource_Identifier[URI]-addressed https://en.wikipedia.org/wiki/Tuple_space[tuple space].
+. A hardware agnostic https://en.wikipedia.org/wiki/Clustered_file_system[distributed file] system embedded in the URI address space.
+. A programming language for defining monoids to control swarms of distributed https://en.wikipedia.org/wiki/Monad_(functional_programming)[monads].
+. A https://en.wikipedia.org/wiki/Read%E2%80%93eval%E2%80%93print_loop[REPL] environment for writing and deploying monoids in real-time.
+. Runs in a https://en.wikipedia.org/wiki/Sandbox_(computer_security)[sandboxed] form on Linux and MacOS system.
+. A https://en.wikipedia.org/wiki/Bootloader[bootloader] driven by a single https://en.wikipedia.org//wiki/YAML[YAML] file.
 
 == Booting FhatOS
+
+
 
 === Booting on Linux/Unix/Mac
 
