--- a/docs/src/fhatos.adoc
+++ b/docs/src/fhatos.adoc
@@ -1,4 +1,4 @@
-:imagesdir: ../images
+:imagesdir: ./images
 :favicon: {imagesdir}/fhatos-logo-small.png
 :author: Dogturd Stynx
 :email: dogturd.stynx@fhatos.org
@@ -6,6 +6,8 @@
 :highlightjs-languages: java
 :tabsize: 2
 :stem: latexmath
+:source-highlighter: highlight.js
+:stylesheet: ../css/fhatos.css
 
 = FhatOS: A Distributed Operating System for Embedded Systems (v{revnumber})
 
@@ -64,12 +66,12 @@ Provided drivers include pulse wave modulation, thermometer, gas, H-bridge, etc.
 A simple mm-ADT program is defined below.
 The program is a specialization of the poly-type `rec` called `thread`, where `thread` is abstractly defined as
 
-```.cpp
+[source,ruby]
+----
 thread[[setup => __]
         loop  => __]]
-```
+----
 
-[subs="attributes+"]
 ++++
 <!-- CODE:BASH:START -->
 <!-- ./docs/build/main_runner.out "define(/int/nat,|is(gt(0)))" "nat[10]" "nat[-5]" "nat[5.0]" -->
@@ -80,7 +82,7 @@ thread[[setup => __]
 
 ++++
 <!-- CODE:BASH:START -->
-<!-- ./docs/build/main_runner.out "define(/int/nat,is(gt(0)))" "define(/rec/person,[name=>as(/str/),age=>as(/int/nat)])" "person[[name=>'fhatty',age=>0]]" "person[[name=>'fhatty',age=>1]]" -->
+<!-- ./docs/build/main_runner.out "define(/int/nat,|is(gt(0)))" "define(/rec/person,|[name=>as(/str/),age=>as(/int/nat)])" "person[[name=>'fhatty',age=>0]]" "person[[name=>'fhatty',age=>1]]" -->
 <!-- CODE:END -->
 <!-- OUTPUT:START -->
 <!-- OUTPUT:END -->
@@ -90,22 +92,24 @@ The `thread` object is published to the fURI endpoint `esp32@127.0.0.1/scheduler
 The scheduler spawns the program on an individual `thread` accessible via the target fURI.
 Once spawned, the `setup` function prints the thread's id and halts.
 
-```.cpp
+[source,.cpp]
+----
 fhatos> thread[[setup => print('setup complete'),
                 loop  => stop(/abc/)]].to(/abc/)
-```
+----
 
-```.cpp
+[source,ruby]
+----
 fhatos> */abc/
 ==> thread[[setup => print('setup complete'),
             loop  => stop(/abc/)]]
-```
+----
 
-### The Router Structure
+=== The Router Structure
 
-### The Scheduler Process
+=== The Scheduler Process
 
-### A FhatOS Console
+=== A FhatOS Console
 
 .FhatOS Console
 ****
@@ -116,13 +120,14 @@ The FhatOS Console is a composite of 3 other actors:
 . The `Processor` (`/sys/lang/processor/`) executes bytecode.
 ****
 
-```
+[source,ruby]
+----
 terminal/in =[str]=> console
   =[str]=> parser =bcode<~/abc>=>
     processor =[objs]=> ~/abc
       <=[objs]= console
         =[str]=> terminal/out
-```
+----
 
 ### fURI and MQTT
 
