--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -111,7 +111,7 @@ fhatos> define(/rec/person,|[name=>as(/str/),age=>as(/int/nat)])
 fhatos> person[[name=>'fhatty',age=>0]]
 [ERROR]  [/sys/lang/type/] 0 is not a /int/nat[is[gt[0]]]
 fhatos> person[[name=>'fhatty',age=>1]]
-==>person[[name=>'fhatty',age=>1]]
+==>person[[/rec/name=>'fhatty',/rec/age=>1]]
 ----
 ++++
 <!-- OUTPUT:END -->
@@ -205,8 +205,9 @@ fhatos> __(1,2,3,4).plus(10)
 ==>13
 ==>14
 fhatos> 16.to(b)
-==>16
 fhatos> *b.plus(45)
-
+==>61
+----
+++++
 <!-- OUTPUT:END -->
 ++++
