--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -121,8 +121,8 @@ The following subsections will provide a short overview of the aforementioned re
 ----
 
 
-fhatos> 
-fhatos> */sys/scheduler
+
+fhatos> fhatos> */sys/scheduler
 =>[
 ===>barrier=>noobj
 ===>process=>
@@ -192,8 +192,8 @@ TIP: Given the frequency of use of base types, specifying the type is not necess
 ----
 
 
-
-fhatos> fhatos> /type/int/[6]
+fhatos> 
+fhatos> /type/int/[6]
 ===>6
 fhatos> int[6]
 ===>6
@@ -220,8 +220,8 @@ Examples of the aforementioned types are provided below.
 ----
 
 
-
-fhatos> fhatos> true
+fhatos> 
+fhatos> true
 ===>true
 fhatos> 42
 ===>42
@@ -268,8 +268,8 @@ mm-ADT is a structurally typed language, whereby if an `obj` *A* __matches__ `ob
 ----
 
 
-fhatos> 
-fhatos> /type/int/nat -> |is(gt(0))
+
+fhatos> fhatos> /type/int/nat -> |is(gt(0))
 ===>is(gt(0))
 fhatos> nat[6]
 ===>nat[6]
@@ -331,8 +331,8 @@ a|
 ----
 
 
-fhatos> 
-fhatos> y -> 12
+
+fhatos> fhatos> y -> 12
 ===>12
 fhatos> x -> y
 ===>y
@@ -368,8 +368,8 @@ a|
 ----
 
 
-
-fhatos> fhatos> x -> 12
+fhatos> 
+fhatos> x -> 12
 ===>12
 fhatos> *x.plus(10)
 ===>22
